--- a/style.css
+++ b/style.css
@@ -1,1 +1,37 @@
 /* Add your CSS code here */
+* {
+    font-family: Helvetica, Arial, sans-serif;
+    max-width: 700px;
+    margin: auto;
+
+  }
+
+body {
+      min-width: 500px;
+      background-color: #e0eeee;
+  }
+
+.profileBody {
+    display: inline-block;
+    background-color: white;
+    margin-top: 6px;
+    margin-left: 55px;
+    width: 75%;
+    height: 550px;
+  }
+.profileSkills{
+    display : inline-block;
+    background-color: #b2bec3;
+    width : 35%;
+    height: 550px;
+    }
+.pic{
+    height: 180px;
+        width: 150px;
+     margin-left: 16px;
+    margin-top: 16px;
+
+}
+p{
+font-size: 15px;
+}
