--- a/style.css
+++ b/style.css
@@ -22,14 +22,22 @@ body {
 .profileSkills{
     display : inline-block;
     background-color: #b2bec3;
-    width : 35%;
-    height: 550px;
+    height : 140px;
+    width: 525px;
+    position:absolute;
+    left: 473px;
+    top:6px;
+    
     }
 .pic{
-    height: 180px;
-        width: 150px;
-     margin-left: 16px;
-    margin-top: 16px;
+    height: 130px;
+        width: 115px;
+     margin-left: 400px;
+    margin-top: 10px;
+    position: absolute;
+    top: 0px;
+    
+    
 
 }
 p{
